fix red5.sh on Linux and Windows MSYS machines
git-svn-id: http://red5.googlecode.com/svn/java/server/trunk@3408 1b6495e4-3631-0410-8e05-8f51eee8b9cc